--- a/rcm/tmux.conf
+++ b/rcm/tmux.conf
@@ -1,5 +1,5 @@
-# Reattach to user namespace so that clipboard integration with OS X works.
-set -g default-command 'reattach-to-user-namespace -l bash'
+# # Reattach to user namespace so that clipboard integration with OS X works.
+# set -g default-command 'reattach-to-user-namespace -l bash'
 
 set-window-option -g alternate-screen off
 set -g terminal-overrides 'rxvt-unicode*:sitm@,ritm@,xterm*:smcup@:rmcup@'
