--- a/rcm/config/alacritty/alacritty.yml
+++ b/rcm/config/alacritty/alacritty.yml
@@ -38,14 +38,14 @@ draw_bold_text_with_bright_colors: false
 # Font configuration (changes require restart)
 font:
   normal:
-    family: Iosevka Light
+    family: Iosevka Term Light
     # family: IBM Plex Mono
   bold:
-    family: Iosevka
+    family: Iosevka Term
     # family: IBM Plex Mono
     style: Bold
   italic:
-    family: Iosevka
+    family: Iosevka Term
     # family: IBM Plex Mono
     style: Italic
 
